<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:key=""
    >

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory
        android:title="@string/preference_category_main_categories"
        >

        <Preference
            android:key="video_screen_setting"
            android:title="@string/preference_video_title"
            android:summary="@string/preference_video_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment"
            android:icon="@drawable/ic_setting_video"
            />

        <Preference
            android:key="control_screen_setting"
            android:title="@string/preference_control_title"
            android:summary="@string/preference_control_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceControlFragment"
            android:icon="@drawable/ic_menu_custom_controls"
            />

        <Preference
            android:key="java_screen_setting"
            android:title="@string/preference_java_title"
            android:summary="@string/preference_java_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceJavaFragment"
            android:icon="@drawable/ic_setting_java_runtime"
            />

        <Preference
            android:key="misc_screen_setting"
            android:title="@string/preference_misc_title"
            android:summary="@string/preference_misc_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceMiscellaneousFragment"
            android:icon="@drawable/ic_setting_misc"
            />


        <Preference
            android:key="experimental_screen_setting"
            android:title="@string/preference_experimental_title"
            android:summary="@string/preference_experimental_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceExperimentalFragment"
            />
    </PreferenceCategory>

    <SwitchPreference
        android:title="@string/preference_force_english_title"
        android:key="force_english"
        android:summary="@string/preference_force_english_description"
        />

    <PreferenceCategory android:title="@string/mikael_preference_category_experience">
        <SwitchPreference
            android:defaultValue="true"
            android:key="launcher_animations"
            android:title="@string/mikael_preference_animations"
            android:summary="@string/mikael_preference_animations_summary" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="launcher_sounds"
            android:title="@string/mikael_preference_sounds"
            android:summary="@string/mikael_preference_sounds_summary" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="auto_updates"
            android:title="@string/mikael_preference_auto_updates"
            android:summary="@string/mikael_preference_auto_updates_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="wifi_only"
            android:title="@string/mikael_preference_wifi_only"
            android:summary="@string/mikael_preference_wifi_only_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/mikael_tools_category">
        <SwitchPreference
            android:defaultValue="false"
            android:key="auto_backup"
            android:title="@string/mikael_auto_backup"
            android:summary="@string/mikael_auto_backup_summary" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="download_retry"
            android:title="@string/mikael_download_retry"
            android:summary="@string/mikael_download_retry_summary" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_diagnostics"
            android:title="@string/mikael_show_diagnostics"
            android:summary="@string/mikael_show_diagnostics_summary" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="thermal_guard"
            android:title="@string/mikael_thermal_guard"
            android:summary="@string/mikael_thermal_guard_summary" />
    </PreferenceCategory>

    <Preference
        android:title="@string/preference_ask_for_notification_title"
        android:summary="@string/preference_ask_for_notification_description"
        android:key="notification_permission_request"
        />





</PreferenceScreen>
