<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="@string/preference_category_video" >
        <androidx.preference.ListPreference
            android:key="performance_profile"
            android:defaultValue="turbo"
            android:entries="@array/mikael_performance_profile_entries"
            android:entryValues="@array/mikael_performance_profile_values"
            android:title="@string/mikael_performance_profile_title"
            android:summary="@string/mikael_performance_profile_summary" />
        <androidx.preference.ListPreference
            android:title="@string/mcl_setting_category_renderer"
            android:key="renderer"
            android:defaultValue="opengles2"
            android:icon="@drawable/ic_setting_engine"
            app2:useSimpleSummaryProvider="true"/>
        <androidx.preference.ListPreference
            android:key="renderer_profile"
            android:defaultValue="performance"
            android:entries="@array/mikael_renderer_profile_entries"
            android:entryValues="@array/mikael_renderer_profile_values"
            android:title="@string/mikael_renderer_profile_title"
            android:summary="@string/mikael_renderer_profile_summary" />
        <androidx.preference.SwitchPreferenceCompat
            android:key="shader_cache_enabled"
            android:defaultValue="true"
            android:title="@string/mikael_shader_cache_title"
            android:summary="@string/mikael_shader_cache_summary" />
        <androidx.preference.SwitchPreferenceCompat
            android:key="zink_threaded"
            android:defaultValue="true"
            android:title="@string/mikael_zink_threaded_title"
            android:summary="@string/mikael_zink_threaded_summary" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ignoreNotch"
            android:summary="@string/mcl_setting_subtitle_ignore_notch"
            android:title="@string/mcl_setting_title_ignore_notch"
            android:icon="@drawable/ic_setting_hide_notch"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="resolutionRatio"
            android:summary="@string/mcl_setting_subtitle_resolution_scaler"
            android:title="@string/mcl_setting_title_resolution_scaler"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:min="@integer/resolution_seekbar_min"
            app2:seekBarIncrement="@integer/resolution_seekbar_increment"
            android:icon="@drawable/ic_setting_screen_resolution"
            />

        <SwitchPreference
            android:title="@string/preference_sustained_performance_title"
            android:summary="@string/preference_sustained_performance_description"
            android:key="sustainedPerformance"
            android:defaultValue="false"
            />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="alternate_surface"
            android:summary="@string/mcl_setting_subtitle_use_surface_view"
            android:title="@string/mcl_setting_title_use_surface_view"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_vsync"
            android:summary="@string/preference_force_vsync_description"
            android:title="@string/preference_force_vsync_title"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="vsync_in_zink"
            android:summary="@string/preference_vsync_in_zink_description"
            android:title="@string/preference_vsync_in_zink_title"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="uncapped_fps"
            android:summary="@string/mikael_uncapped_fps_summary"
            android:title="@string/mikael_uncapped_fps_title" />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:summary="@string/mikael_performance_mode_summary"
            android:title="@string/mikael_performance_mode_title" />
    </PreferenceCategory>
</PreferenceScreen>
